--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ m774 5 c8 -19 24 -37 35 -41 29 -9 26 -20 -14 -51 -34 -26 -61 -30 -30 -4 21
                 <div data-scroll data-scroll-speed="-2" class="dets"></div>
             </div>
             <div id="elem2" class="elem">
-                <img data-scroll data-scroll-speed="1" src="https://i.pinimg.com/originals/f1/34/98/f13498e0d7694613de812f44bb61e93c.jpg" alt=""/>
+                <img data-scroll data-scroll-speed="1" src="https://th.bing.com/th/id/OIP.grbTonHPP-J462AhgGIDTQHaKd?rs=1&pid=ImgDetMain" alt=""/>
                 <div data-scroll data-scroll-speed="-2" class="dets"></div>
             </div>
             <div id="elem3" class="elem">
